# fixattiosync

./: Dockerfile  README.md  fixattiosync-shim  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: docker-build.yml  tox.yml
fixattiosync/: __init__.py  __main__.py  args.py  attiodata.py  attioresources.py  fixdata.py  fixresources.py  logger.py  sync.py  utils.py
tests/: test_logger.py  test_util.py
